<resources>
    <string name="app_name">SmartTrips</string>
    <string name="cadna">cadna</string>
    <string name="default_web_client_id">906269051389-f20dul7rqk3o5sb3ooe6cfur8l0h59eo.apps.googleusercontent.com</string>
    <string name="ville_de_depart">Departure city</string>
    <string name="nom_du_trajet">Strip Name </string>
    <string name="trip_dates">Du %1$s au %2$s</string>
    <string name="voyage_image_desc">Image du voyage</string>
    <string name="edit_trip">Modifier le voyage</string>
    <string name="label_trip_name">Trip name</string>
    <string name="hint_trip_name">Enter trip name</string>
    <string name="label_description">Description</string>
    <string name="hint_description">Enter description</string>
    <string name="label_country_code">Country code</string>
    <string name="hint_country_code">e.g. US</string>
    <string name="label_departure_city">Departure city</string>
    <string name="hint_departure_city">e.g. Paris</string>
    <string name="label_public_trip">Public trip?</string>
    <string name="label_city_placeholder">City</string>
    <string name="label_trip_name_sample">My awesome trip</string>
    <string name="label_trip_dates_sample">Jan 1 – Jan 2, 2024</string>
    <string name="profile_image_desc">Profile picture</string>
    <string name="label_profile_name_placeholder">User Name</string>
    <string name="favorite_icon_desc">Favorite</string>
    <string name="label_poi_name">POI Name</string>
    <string name="hint_poi_name">e.g. “Café Central”</string>
    <string name="label_poi_comments">Comments</string>
    <string name="hint_poi_comments">Your notes…</string>
    <string name="edit_poi">Edit POI</string>
    <string name="delete_poi">Delete POI</string>
    <string name="view_pois">View POIs</string>
    <string name="add_poi">Add POI</string>
    <string name="no_pois">No points of interest</string>
    <string name="centrer_ma_position">Centrer ma position</string>
    <string name="ajouter_un_point_d_int_r_t">Ajouter un point d’intérêt</string>
    <!-- TODO: Remove or change this placeholder text -->

</resources>
