<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:padding="24dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_poi_name"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/editPoiName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:hint="@string/hint_poi_name"
        android:inputType="textPersonName"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/label_poi_comments"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/editPoiComments"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:hint="@string/hint_poi_comments"
        android:inputType="textMultiLine"/>

  </LinearLayout>
</ScrollView>
